--- a/HW_1/Урок 1. Дополнительные задания.html
+++ b/HW_1/Урок 1. Дополнительные задания.html
@@ -26,8 +26,8 @@
         var x = 'x';
 
         x1 = prompt('Input x1 coordinate');
-        x2 = prompt('Input X2 coordinate');
         y1 = prompt('Input y1 coordinate');
+        x2 = prompt('Input X2 coordinate');
         y2 = prompt('Input y2 coordinate');
 
         k = (y1 - y2) / (x1 - x2);
@@ -48,12 +48,15 @@
         a = b;
         b = c;
 
+        console.log(b);
+
         //---------------------------------------------------------//
 
         var admin;
         var name = 'Vasily';
 
         admin = name;
+        console.log(admin);
         console.log(name);
 
         //----------------------------------------------------------//
