--- a/HW_3/1.html
+++ b/HW_3/1.html
@@ -11,13 +11,21 @@
     //Методы массивов
         // .split()
 
-        var countries = 'Ukraine, Russia, Belarus'
+        var countries = 'Ukraine, Russia, Belarus';
 
         var arr = countries.split(', ');
 
         for (var i = 0; i < arr.length; i++) {
         alert( 'The countries are ' + arr[i] );
         }
+
+        // .join()
+
+        var arr = ['Kiev', 'London', 'Paris', 'New York'];
+
+        var str = arr.join(';');
+
+        alert( str ); // Kiev;London;Paris;New York
 
         // .splice()
 
@@ -34,6 +42,66 @@
         var arr2 = arr.slice(1, 3); // копирует часть массива, начиная с 1-го элемента, по второй.
 
         alert( arr2 ); // have to
+
+        // .reverse()
+
+        var arr = [1, 2, 3];
+        arr.reverse();
+
+        alert( arr ); // 3,2,1
+
+
+        // .sort()
+
+        const bands = [
+        { genre: 'Rap', band: 'Migos', albums: 2},
+        { genre: 'Pop', band: 'Coldplay', albums: 4},
+        { genre: 'Rock', band: 'Breaking Benjamins', albums: 1}
+        ];
+
+        
+        function compare(a, b) {
+        const genreA = a.genre.toUpperCase();
+        const genreB = b.genre.toUpperCase();
+        
+        let comparison = 0;
+        if (genreA > genreB) {
+            comparison = 1;
+        } else if (genreA < genreB) {
+            comparison = -1;
+        }
+        return comparison;
+        }
+
+        console.log(bands.sort(compare));
+
+        // .forEach()
+
+        var arr = ["Apple", "Orange", "Pear"];
+
+        arr.forEach(function(item, i, arr) {
+        alert( i + ": " + item + " (array:" + arr + ")" );
+        });
+
+        // .map()
+
+        var names = ['Kiev', 'London', 'Paris'];
+
+        var nameLengths = names.map(function(name) {
+        return name.length;
+        });
+
+        alert( nameLengths ); // 4,6,5
+
+        // .filter()
+
+        var arr = [1, -1, 2, -2, 3];
+
+        var positiveArr = arr.filter(function(number) {
+        return number > 0;
+        });
+
+        alert( positiveArr ); // 1,2,3
     </script>
 </body>
 </html>
