--- a/HW_5/3_4_5.html
+++ b/HW_5/3_4_5.html
@@ -102,75 +102,34 @@
 
     function employeeSorting () {
         var sortedElement = prompt('What parameter should be used for sorting? (options: name, sName, age, occupation, salary)');
-        if (sortedElement == 'name')
-
-        {
-            function compareName (a, b) {
-                var nameA = a.name.toUpperCase();
-                var nameB = b.name.toUpperCase();
-                if (nameA > nameB) return 1;
-                if (nameA < nameB) return -1;
-                return 0;
-            }
-
-            employees.sort(compareName);
-            return (employees);
-        }   if (sortedElement == 'sName')   {
-
-            function comparesName (a, b) {
-                var nameA = a.sName.toUpperCase();
-                var nameB = b.sName.toUpperCase();
-                if (nameA > nameB) return 1;
-                if (nameA < nameB) return -1;
-                return 0;
-            }
-
-            employees.sort(comparesName);
-            return (employees);
-        }
-
-        if (sortedElement == 'age')
-
-        {
-            function compareAge (a, b) {
-                if (a.age < b.age) return 1;
-                if (a.age > b.age) return -1;
-                return 0;
-            }
-
-            employees.sort(compareAge);
-            return (employees);
-        }
-
-        if (sortedElement == 'occupation')
-
-        {
-            function compareOccupation (a, b) {
-                var nameA = a.occupation.toUpperCase();
-                var nameB = b.occupation.toUpperCase();
-                if (nameA > nameB) return 1;
-                if (nameA < nameB) return -1;
-                return 0;
-            }
-
-            employees.sort(compareOccupation);
-            return (employees);
-        }
-
-        if (sortedElement == 'salary')
-        {
-            function compareSalary (a, b) {
-                if (a.salary < b.salary) return 1;
-                if (a.salary > b.salary) return -1;
-                return 0;
-            }
-
-            employees.sort(compareSalary);
-            return employees;
-        } else {
+        for (i = 0; i<employees.length; i++) {
+            if (employees[i].hasOwnProperty(sortedElement))
+            {
+                if (typeof(sortedElement) == 'string') {
+                function compareString (a, b) {
+                    var nameA = a[sortedElement].toUpperCase();
+                    var nameB = b[sortedElement].toUpperCase();
+                    if (nameA > nameB) return 1;
+                    if (nameA < nameB) return -1;
+                    return 0;
+                }
+                employees.sort(compareString);
+                return (employees);
+            } else {
+                function compareNumber (a, b) {
+                    if (a[sortedElement] < b[sortedElement]) return 1;
+                    if (a[sortedElement] > b[sortedElement]) return -1;
+                    return 0;
+                }
+                employees.sort(compareNumber);
+                return (employees);
+                }
+            } else {
             alert('You have entered an invalid parameter, please try again');
             var sortedElement = prompt('What parameter should be used for sorting? (options: name, sName, age, occupation, salary)');
+            }
         }
+        
     } 
 
     employeeSorting(employees);
