--- a/hw_4/4.html
+++ b/hw_4/4.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <script>
-        dfsfsdf
+        function numbers (num) {
+            num = +prompt('Please enter a Fibonacci number ');
+            var number = [0, 1]
+            for (i = 0; i < num; i++) {
+                number.push(number[i] + number[i+1]);
+            }
+            return number[num-1];
+        }
+
+        console.log(numbers());
     </script>
 </body>
 </html>
